2018-04-02         Arnold D. Robbins     <arnold@skeeve.com>

	* config.guess, config.sub, install-sh: Updated from GNULIB.

2018-04-01         Arnold D. Robbins     <arnold@skeeve.com>

	Fix a nasty MPFR bug in r_dupnode. If the value being copied
	is MPFN / MPFR, copy those bits over too. Thanks to
	Noah Dean <N.Dean@gaminglabs.com> for the report.

	* node.c (r_dupnode): Check for MPFN / MPFR and copy the bits
	over as needed.

	Unrelated:

	* interpret.h (UNFIELD): Turn into an inline function and
	let UNFIELD macro call it, allows stepping in with a debugger.
	(unfield): Function holding former body of UNFIELD macro.

2018-03-26         Arnold D. Robbins     <arnold@skeeve.com>

	Remove the tail recursion optimization. It's fundamentally
	broken, in the case where a local var becomes a parameter.
	Thanks to Denis Shirokov <cosmogen@gmail.com> for the report.
	See test/tailrecurse.awk.

	* awk.h [num_tail_calls, tail_call]: Remove definitions.
	* awkgram.y (grammar, mk_function): Remove code related to
	the tail recursion optimization.
	* eval.c (dump_fcall_stack): Adjust dumping code since no longer
	looping through tail call recursion.
	(setup_frame): Remove code related to the tail recursion optimization.
	(init_interpret): Ditto.

2018-03-22         Arnold D. Robbins     <arnold@skeeve.com>

	* configure.ac: Check for %a support in system printf.
	* builtin.c (format_tree): Add support for %a and %A, including
	a lint warning.
	* NEWS: Add a note about %a support.

2018-03-13         Arnold D. Robbins     <arnold@skeeve.com>

	* debug.c, nonposix.h: Update copyright year.

2018-03-11         Arnold D. Robbins     <arnold@skeeve.com>

	* compile, config.guess, config.sub, configure.ac, depcomp,
	install-sh, mkinstalldirs: Updated.

2018-03-05         Arnold D. Robbins     <arnold@skeeve.com>

	* awk.h [PUSH_BINDING, POP_BINDING]: Moved to ...
	* debug.c: here.
	* awkgram.y (yylex): Make do_etoa_init into a boolean.