@@ -1,3 +1,8 @@
+2018-04-14         Manuel Collado       <m-collado@users.sourceforge.net>
+
+	* Makefile.am (readdir_retest): Add new test.
+	* readdir_retest.awk: New file.
+
 2018-04-01         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (EXTRA_DIST): Add files for mpfrfield.
