@@ -1,3 +1,8 @@
+2018-04-14         Manuel Collado       <m-collado@users.sourceforge.net>
+
+	* field.c (reset_record): Disable fieldwidth from API
+	get_record() if $0 is explicitly assigned a new value.
+
 2018-04-02         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* config.guess, config.sub, install-sh: Updated from GNULIB.
